Assign (click) event to toggle() method

--- a/app/favorite.template.html
+++ b/app/favorite.template.html
@@ -1,5 +1,5 @@
 <i class="glyphicon"
    [class.glyphicon-star]="isFavorite"
    [class.glyphicon-star-empty]="!isFavorite"
-   (click)="onClick()">
+   (click)="toggle()">
 </i>
