--- a/app/signup-form.template.html
+++ b/app/signup-form.template.html
@@ -7,7 +7,12 @@
                ngControl="username"
                #username="ngForm"
         >
+        <div *ngIf="username.control.pending">Checking for uniqueness.</div>
         <div *ngIf="username.touched && username.errors">
+            <div
+                    *ngIf="username.errors.invalidLogin"
+                    class="alert alert-danger">Username or password is invalid.
+            </div>
             <div
                     *ngIf="username.errors.required"
                     class="alert alert-danger">Username is required.
@@ -15,6 +20,10 @@
             <div
                     *ngIf="username.errors.cannotContainSpace"
                     class="alert alert-danger">Username cannot contain space.
+            </div>
+            <div
+                    *ngIf="username.errors.shouldBeUnique"
+                    class="alert alert-danger">Username already used.
             </div>
         </div>
     </div>
