Remove "Loading..." label

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Angular 2 QuickStart</title>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="app/styles.css">
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="https://use.fontawesome.com/a7e1d47db1.js"></script>
@@ -20,7 +19,7 @@
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
-        packages: {        
+        packages: {
           app: {
             format: 'register',
             defaultExtension: 'js'
@@ -35,7 +34,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app></my-app>
   </body>
 
 </html>
