--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 <head>
     <base href="/">
     <title>Angular 2 QuickStart</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <style>
-        body {
-            padding: 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/stylesheets/bootstrap.css">
+
     <!-- 1. Load libraries -->
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
@@ -34,9 +29,9 @@
 
   </head>
 
-  <!-- 3. Display the application -->
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+<!-- 3. Display the application -->
+<body>
+<my-app></my-app>
+</body>
 
 </html>
