--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <base href="/">
     <title>Angular 2 QuickStart</title>
     <link rel="stylesheet" href="assets/stylesheets/bootstrap.css">
+    <link rel="stylesheet" href="assets/stylesheets/custom.css">
 
     <!-- 1. Load libraries -->
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
