--- a/index.html
+++ b/index.html
@@ -7,32 +7,24 @@
     <link rel="stylesheet" href="assets/stylesheets/custom.css">
     <link rel="stylesheet" href="assets/stylesheets/font-awesome.css">
     <!-- 1. Load libraries -->
-    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="node_modules/angular2/bundles/router.dev.js"></script>
-    <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
     <!-- 2. Configure SystemJS -->
+    <script src="systemjs.config.js"></script>
     <script>
-        System.config({
-            packages: {
-                app: {
-                    format: 'register',
-                    defaultExtension: 'js'
-                }
-            }
+        System.import('app').catch(function (err) {
+            console.error(err);
         });
-        System.import('app/boot')
-            .then(null, console.error.bind(console));
     </script>
-
 </head>
 
-<!-- 3. Display the application -->
 <body>
-<my-app></my-app>
+<my-app>Loading...</my-app>
 </body>
-
 </html>
